--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -13,3 +13,10 @@ body {
     height: 100%;
     min-height: 100%;
 }
+
+.vrath-wrapper, .vrath-scene {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
